argo-rollouts/canary/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: primary-ingress
spec:
  rules:
  - host: canary.local
    http:
      paths:
      - path: /
        backend:
          serviceName: stable-service
          servicePort: http
